fix(css): Fix for FireFox not showing grid in dungeons

--- a/src/styles/dungeon.less
+++ b/src/styles/dungeon.less
@@ -18,7 +18,7 @@
 }
 
 .tile-player {
-  background: green;
+  background-color: #2ecc71;
   position: relative;
   &::after {
     position: absolute;
